--- a/k-9/app/ui/legacy/src/main/res/layout/message_compose_content.xml
+++ b/k-9/app/ui/legacy/src/main/res/layout/message_compose_content.xml
@@ -48,9 +48,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dip"
             android:layout_marginRight="12dip"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:minHeight="50dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/digital_sign_button"
@@ -68,7 +68,7 @@
                 android:layout_marginLeft="6dip"
                 android:layout_marginRight="6dip"
                 android:layout_weight="1"
-                android:text="@string/message_compose_custom_encryption_hint"/>
+                android:text="@string/message_compose_custom_encryption_hint" />
         </LinearLayout>
 
         <View
